--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -2,6 +2,31 @@
 <html>
     <body>
         <a href="/expenses/addExpense">Click Here To Add Expense</a>
+
+        <div>
+            <ul>
+                <a class="list-group-item">
+                    <i class="material-icons">directions_bus</i>
+                    <div class="bmd-list-group-col">
+                    <p class="list-group-item-heading">87 Bus ticket</p>
+                    <p class="list-group-item-text">Travel</p>
+                    </div>
+                    <span class="label label-default label-pill pull-xs-right">$1.6</span>
+                </a>
+
+                <a class="list-group-item">
+                    <i class="material-icons">restaurant</i>
+                    <div class="bmd-list-group-col">
+                    <p class="list-group-item-heading">Chicken Tikka Roll</p>
+                    <p class="list-group-item-text">Food</p>
+                    </div>
+                    <span class="label label-default label-pill pull-xs-right">$7</span>
+                </a>
+
+            </ul>
+
+        </div>
+        
     </body>
     
 </html>
