--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -67,6 +67,12 @@
                                         <b>{{error}}</b> 
                                 </div>
                         {{/if}}
+                          <div >
+                                        <a id = "text"> Already have an account?</a>
+                                        
+                                        <a class = "button" href="/login">Login</a>                                        
+                                
+                                </div>
 
                                 
                                
