--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,12 +22,13 @@
 
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
         
-        <title>Add New Expense</title>
+        <title>Expense Manager</title>
 
     </head>
 
 
     <body>
+      
             <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Expense Manager</a>
             
@@ -46,6 +47,9 @@
                         <li class="nav-item">
                           <a class="nav-link" href="#">Expenses</a>
                         </li>
+                        
+                        
+                        
                       </ul>
             
                       <!-- <span class="navbar-text">
@@ -53,6 +57,7 @@
                       </span> -->
 
                       <div class="btn-group pull-xs-right">
+                        <h6 class = "welcome">{{firstname}}</h6>
                             <button class="btn bmd-btn-icon dropdown-toggle" type="button" id="lr2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               <i class="material-icons md-light md-36">person</i>
                             </button>
