--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -70,7 +70,7 @@
                           <div >
                                         <a id = "text"> Already have an account?</a>
                                         
-                                        <a class = "button" href="/login">Login</a>                                        
+                                        <a class = "button" href="/">Login</a>                                        
                                 
                                 </div>
 
