--- a/public/css/header.css
+++ b/public/css/header.css
@@ -23,6 +23,13 @@
    margin: auto;
 }
 
+.welcome{
+    align-content: right;
+    color: white;
+    float: right;
+    padding: 10px
+}
+
 #account-icon{
     margin-right: 100px;
 }
