--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -76,7 +76,7 @@
                                                   <a class="dropdown-item" href="#">Cash</a>
                                                   <a class="dropdown-item" href="#">Forex card</a>
                                                   <div class="dropdown-divider"></div>
-                                                  <a class="dropdown-item" href="#">Add New Account</a>
+                                                   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Category</button>
                                                 </div>
                                         </div>
                                    
