--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -70,7 +70,7 @@
                                                   <a class="dropdown-item" href="#">Groceries</a>
                                                   <a class="dropdown-item" href="#">Education</a>
                                                   <div class="dropdown-divider"></div>
-                                                  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Category</button>
+                                                  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Category</button>
                                                   
                                                 </div>
                                         </div>
