--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -45,7 +45,7 @@
                           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                             -->
 
-                          <form action="/expenses/saveNewIncome" method="POST"> 
+                          <form action="/income/saveNewIncome" method="POST"> 
                                 <!-- <div class="form-group">
                                         <span class="input-group-addon">$</span>
                                         <input type="text" class="form-control" id="expense-amount" placeholder="Enter Amount">
@@ -82,7 +82,7 @@
                                    
                                 </div>
                                  <div class="date">
-                                     <label for="dt">Date: </label>
+                                        <label for="dt">Date: </label>
 	                                <input name="dt" type="date"/>
                                 </div>
  
