--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -5,7 +5,7 @@
         <div>
             <a href="/expenses/addExpense">Click Here To Add Expense</a>
             <a>or</a>
-            <a href="/expenses/addIncome">Click Here To Add Income</a>
+            <a href="/income/addIncome">Click Here To Add Income</a>
         </div>
         
         <div class="card">
