UI updates on Add expense & All expenses page

--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/public/css/add_expense.css">
+        <link rel="stylesheet" href="/public/css/all_expenses.css">
 
         <title>All Expenses</title>
 
@@ -17,7 +17,7 @@
             <a href="/income/addIncome">Click Here To Add Income</a>
         </div>
         
-        <div class="card">
+        <div id="expenses-card" class="card">
 
                         <div id="my-title-container" class="card-header">
                           <h5 class="my-card-header-title">ALL EXPENSES</h5>
