--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -104,7 +104,7 @@
                                        <a id="select_date" class="c-btn c-datepicker-btn">Select Date</a>
                                 </div>
                                 
-                                <button id="primary-button"  type="submit" class="btn btn-primary btn-lg btn-raised">Save</button>
+                                <button id="primary-button"  type="submit" class="btn btn-primary btn-raised">Save</button>
                                 
                             </form>
 
@@ -129,7 +129,7 @@
                                 <div class="card">
                                         <div id="my-title-container" class="card-header">
                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                <h5 class="my-card-header-title">Add New Category</h5>
+                                                <h5 class="my-card-header-title">ADD NEW CATEGORY</h5>
                                         </div>
                                                 
                                         
@@ -140,7 +140,7 @@
                                                                 <input type="text" name="amount" class="form-control" placeholder="Enter Your Category"/>
                                                         </div>
 
-                                                        <button id="primary-button"  type="submit" class="btn btn-primary btn-lg btn-raised">Save</button>  
+                                                        <button id="primary-button"  type="submit" class="btn btn-primary btn-raised">Save</button>  
                                                 </form>
                                         </div>
                                 </div>
