--- a/public/css/all_expenses.css
+++ b/public/css/all_expenses.css
@@ -1,6 +1,15 @@
 #my-title-container{
     background: #E53935;
 }
+
+#amount{
+    font-size: 14pt;
+}
+
+#expense-desc{
+    font-size: 12pt;
+}
+
 .my-card-header-title{
     font-style: bold;
     padding: 6px;
@@ -10,4 +19,17 @@
 #expenses-card{
     width: 80%;
     margin: auto;
+}
+
+tr{
+    padding: 16px;
+}
+
+
+td{
+    padding: 12px;
+}
+
+#edit{
+    float: right;
 }
