--- a/public/css/add_income.css
+++ b/public/css/add_income.css
@@ -35,4 +35,17 @@
     float: right;
 }
 
+.date{
+    padding-left: 20px;
+    border-collapse: collapse;
+    font-size: .9em;
+    margin: 0 0 .4em;
+    width: 100%;
+   
+    font-weight: bold;
+    
+   
+    
+    
+}
 
