--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
 
     <body>
       
-            <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+            {{!-- <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
                     <a class="navbar-brand" href="/">Expense Manager</a>
             
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +71,7 @@
                           </div>
 
                     </div>
-            </nav>
+            </nav> --}}
 
             <main>
               {{{body}}}
