--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -3,39 +3,101 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        {{!-- <link rel="stylesheet" href="/public/css/all_expenses.css"> --}}
+        <link rel="stylesheet" href="/public/css/all_accounts.css">
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.0.0-beta.4/dist/css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
 
         <title>All Bank A/cs</title>
 
     </head>
     
     <body>
-        
-        <div id="bank-card" class="card">
-            <div id="my-title-container" class="card-header">
-                <h5 class="my-card-header-title">BANK ACCOUNTS</h5>
-            </div>
-
-            <div class="card-body">
-                <div>
-                    {{#each accounts}}
-                    <div class = "card">
-                        <div class = "container">
-                            <h4><b> {{this.ac_name}} </b></h4>
-                            <p> BAL: {{this.ac_bal}} <p>
-                            <a href="/expenses/all_expenses"> VIEW </a>
-                        </div>
-                    </div>
-                    {{/each}}
+        <div class="display-form">
+            <div id="bank-card" class="cardM">
+                <div id="my-title-container" class="card-header">
+                    <h5 class="my-card-header-title">BANK ACCOUNTS</h5>
+                    <div class="btnAdd"><i class="material-icons md-36">
+                        <a class="btn-floating icon-white" href="/bankac/addBankAC">add</a>
+                    </i></div>
                 </div>
 
-            </div>
-        </div>
+                <form action="/bankac/deleteAccount" method="POST"> 
 
-        <div>
-            <a href="/bankac/addBankAC">Click Here To Add Bank Account</a>
+                    <ul class="cards">
+                        {{#each accounts}}
+                        <li class="cards__item">
+                            <div class="card">
+                                <div class="card__content">
+                                    <div class="card__title">{{this.ac_name}}</div>
+                                    <p class="acend"> ending in {{this.ac_ending}} </p>
+                                    <p> Account # : {{this.ac_number}} </p>
+                                    <p class="card__text">BALANCE:</p>
+                                    <p> $ <b>{{this.ac_bal}}</b> </p>
+                                    <a class="btn btn--block card__btn" href="/expenses/showAllExpenses">VIEW EXPENSES</a> 
+                                    <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
+                                    {{!-- <div class="btnDel"> <i class=material-icons md-18>
+                                        <button id="primary-buttonD" class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
+                                    </i></div> --}}
+
+                                    <div class="modal fade bs-example-pop">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title">CONFIRMATION</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>Do you want to delete this account?</p>
+                                                    <p>(Click on the account number to confirm deletion)</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <input type="submit" value="No" name="nob"></input>
+                                                    <input type="submit" value="Yes-{{this.ac_number}}" name="yesb"></input>
+                                                    <input type="text" value={{this.ac_number}} name="acn" disabled></input>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <script>
+                                        var modal = document.getElementById("myModal");
+                                        var btn = document.getElementById("primary-buttonD");
+                                        var span = document.getElementsByClassName("close")[0];
+                                        btn.onclick = function() {
+                                            modal.style.display = "block";
+                                        }
+
+                                        // When the user clicks on <span> (x), close the modal
+                                        span.onclick = function() {
+                                            modal.style.display = "none";
+                                        }
+
+                                        // When the user clicks anywhere outside of the modal, close it
+                                        window.onclick = function(event) {
+                                            if (event.target == modal) {
+                                                modal.style.display = "none";
+                                            }
+                                        }
+                                    </script>
+
+                                </div>
+                            </div>
+                        </li>
+                        {{/each}}
+                    </ul>
+                </form>
+            </div>
+
+            {{!-- <div class="btnAdd"><i class="material-icons">
+                <a class="btn-floating btn-large" href="/bankac/addBankAC">add</a>
+            </i></div> --}}
         </div>
-        
     </body>
     
 </html>
