--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,10 +42,10 @@
                           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Accounts</a>
+                          <a class="nav-link" href="/bankac/showAllAccounts">Accounts</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="expenses/showAllExpenses">Expenses</a>
+                          <a class="nav-link" href="/expenses/showAllExpenses">Expenses</a>
                         </li>
                         
                         
