navigation done and income displayed

--- a/views/transactions/all_income.handlebars
+++ b/views/transactions/all_income.handlebars
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/public/css/all_expenses.css">
+        <link rel="stylesheet" href="/public/css/all_income.css">
 
-        <title>All Expenses</title>
+        <title>All Income</title>
 
     </head>
     
@@ -21,7 +21,7 @@
         <div id="expenses-card" class="card">
 
                         <div id="my-title-container" class="card-header">
-                          <h5 class="my-card-header-title">ALL EXPENSES</h5>
+                          <h5 class="my-card-header-title">ALL INCOME</h5>
                         </div>
 
                         <div class="card-body">
