--- a/views/transactions/add_income.handlebars
+++ b/views/transactions/add_income.handlebars
@@ -5,6 +5,13 @@
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="/public/css/add_income.css">
        
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    
+
 
 
         
@@ -82,8 +89,10 @@
                                    
                                 </div>
                                  <div class="date">
-                                        <label for="dt">Date: </label>
+                                        <label id = "label"for="dt" <i class="material-icons">date_range</i></label>
 	                                <input name="dt" type="date"/>
+                                
+
                                 </div>
  
                                 
