--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -17,7 +17,7 @@
             <a>or</a>
             <a href="/income/addIncome">Click Here To Add Income</a>
             <a>or</a>
-            <a href="/showAllIncome">Click Here To View Income</a>
+            <a href="/income/showAllIncome">Click Here To View Income</a>
         </div>
         
         <div id="expenses-card" class="card">
