--- a/public/css/add_income.css
+++ b/public/css/add_income.css
@@ -43,9 +43,14 @@
     width: 100%;
    
     font-weight: bold;
-    
+  
+}
+
+
+#label{
+   padding-right: 25px;
+   border-collapse: collapse; 
+   font-style: bold;
    
-    
-    
 }
 
