--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -101,9 +101,9 @@
                                                   Choose Your bank account
                                                 </button>
                                                 <div class="dropdown-menu">
-                                                {{ #each bank_accounts }}
+                                                {{!-- {{ #each bank_accounts }}
                                                   <a class="dropdown-item" href="#">{{ac_name}}</a>
-                                                {{ /each }}
+                                                {{ /each }} --}}
                                                   <div class="dropdown-divider"></div>
                                                   <a class="dropdown-item" href="#">Add New Account</a>
                                                 </div>
