Updates in expense routes..

--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -112,11 +112,16 @@
                                       
                                 </div>
 
-                                <div id="field-container">
+                                <div class="date">
+                                        <label id = "label"for="dt" <i class="material-icons">date_range</i></label>
+	                                <input name="dt" type="date"/>
+                                </div>
+
+                                {{!-- <div id="field-container">
                                         <input class="c-datepicker-input" />
                                         {{!-- <button id="select_date">Select Date</button> --}}
                                        <a id="select_date" class="c-btn c-datepicker-btn">Select Date</a>
-                                </div>
+                                </div> --}}
                                 
                                 <button id="primary-button"  type="submit" class="btn btn-primary btn-raised">Save</button>
                                 
