--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,13 +39,13 @@
                     <div id="my-header-menu" class="collapse navbar-collapse" id="navbarText">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Accounts</a>
+                          <a class="nav-link" href="/bankac/showAllAccounts">Accounts</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="expenses/showAllExpenses">Expenses</a>
+                          <a class="nav-link" href="/expenses/showAllExpenses">Expenses</a>
                         </li>
                         
                         
