--- a/views/transactions/add_expense.handlebars
+++ b/views/transactions/add_expense.handlebars
@@ -66,11 +66,11 @@
                                                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                   Choose Your Category
                                                 </button>
-                                                <div class="dropdown-menu">
+                                                <div class="dropdown-menu" id = "category">
                                                   <a class="dropdown-item" href="#">Travel</a>
                                                   <a class="dropdown-item" href="#">Groceries</a>
                                                   <a class="dropdown-item" href="#">Education</a>
-                                                  <div class="dropdown-divider"></div>
+                                                  <div class="dropdown-divider" id="divider"></div>
                                                   <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Category</button>
                                                   
                                                 </div>
@@ -150,14 +150,19 @@
                                                 
                                         
                                         <div class="card-body">
+
+                                                <div class="alert alert-danger" id="error-msg"></div>
+                                                <div class="alert alert-success" id="success-msg"></div>
                                                 <form action id = "add-category">
                                                         <div id="field-container" class="input-group">
                                                                 <span class="input-group-addon"><i class="material-icons">loyalty</i></span>
                                                                 <input type="text" name="new-category" id = "new-category" class="form-control" placeholder="Enter Your Category"/>
                                                         </div>
                                                         <button id="primary-button" class="btn btn-primary btn-raised">Save</button>
-                                                            
+                                                        <button id="close-button" data-dismiss = "modal" class="btn btn-danger btn-raised">Close</button>            
                                                 </form>
+                                                
+                                                
                                                 
                                                 
                                         </div>
