--- a/views/transactions/all_income.handlebars
+++ b/views/transactions/all_income.handlebars
@@ -32,7 +32,7 @@
                         <div class="card-body">
                             <div>
                                 {{#each income}}
-                                    <a data-toggle="modal" data-target="#myModal" class="list-group-item"> 
+                                    <a href="/income/viewIncome/{{ _id }}"  class="list-group-item"> 
                                         <i class="material-icons">{{category.icon_name}}</i>
                                         <div class="bmd-list-group-col">
                                             <p id="expense-desc" class="list-group-item-heading">{{desc}}</p>
