--- a/views/transactions/view_income.handlebars
+++ b/views/transactions/view_income.handlebars
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="/public/css/view_expense.css">
+        <link rel="stylesheet" href="/public/css/view_income.css">
 
         
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -25,13 +25,13 @@
 
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
         
-        <title>View expense</title>
+        <title>View income</title>
     </head>
 
     <body>
         <main>
 
-            <div class="view-expense-details">
+            <div class="view-income-details">
                 <div class="card">
 
                         <div id="my-title-container" class="card-header">
@@ -59,7 +59,7 @@
 
                             <tr><td>Category</td></tr>
                                 <tr>
-                                    <td><i class="material-icons">{{ expense.category.icon_name }}</i></td>
+                                    <td><i class="material-icons">{{ income.category.icon_name }}</i></td>
                                     <td>{{ income.category.category_name }}</td>
                                 </tr>
 
